<resources>
    <string name="app_name">setting</string>

    <string name="key_open_source_licences">pref_about_open_source_licences</string>
    <string name="key_dark_theme">setting.dark_theme</string>
    <string name="key_app_language">setting.app_language</string>
    <string name="key_call_recording">setting.call_recording</string>

    <string name="key_app_version">about.app_version</string>
    <string name="key_share_app">about.share_app</string>
    <string name="key_privacy_policy">about.privacy_policy</string>
    <string name="key_terms_of_use">about.terms_of_use</string>
    <string name="message_share_intent">Hey check out CallRecorder app at: https://github.com/Dhaval2404/CallRecorder</string>

    <string name="url_terms_of_use">https://github.com/Dhaval2404/CallRecorder/wiki/Terms-of-Use</string>
    <string name="url_privacy_policy">https://github.com/Dhaval2404/CallRecorder/wiki/Privacy-Policy</string>

    <string-array name="app_language">
        <item>English</item>
        <item>Hindi</item>
        <item>Gujarati</item>
    </string-array>

    <string-array name="app_language_value">
        <item>en</item>
        <item>hi</item>
        <item>gj</item>
    </string-array>


</resources>
